# proof-pilot-codes

./: .gitignore  LICENSE  README.md  pyproject.toml
deploy/: README.md  make_olmo3sink_deploy.py  prepare_yarn_deploy.py
distill_gen/: README.md  collect.py  materialize_templates.py  pack_hf.py  upload_hf.py
evaluation/: README.md
evaluation_local/: README.md  grade_all.sh  t3lite_template.json
kaggle/: README.md
olmo3_sink/: README.md  __init__.py  attention.py  build_init_model.py  configuration_olmo3_sink.py  convert.py  convert_to_gqa.py  fa3_attention_sink.patch  fa3_sink.py  fa3_sink_kernel.py  liger.py  modeling_olmo3_sink.py  register.py  sft_data.py  sink_calib.py  train_sft.py
quantization/: .gitignore  README.md  ablation.py  ablation_results.json  bench_serving.py  common.py  kernel_mscale.py  phase0_sinkoff_2048.json  phase0_sinkoff_8192.json  phase0_sinkon_2048.json  phase0_sinkon_8192.json  phase1_sinkcal_sinkoff_2048.json  phase1_sinkcal_sinkon_2048.json  phase2_agentic-32b-s200_sinkoff_2048.json  phase2_agentic-32b-s200_sinkon_2048.json  phase3_lc10k_sinkon_8192.json  phase3_short_sinkon_8192.json  quantize.py  quantize_draft.py  run_gptq_32b_match.sbatch  sink_patch.py
scripts/: README.md  build_distill_prompts.py  cascade2_jsonl_to_parquet.py  cascade2_robust_convert.py  cascade2_verify_parquet.py  jsonl_to_parquet.py  number_tok.py  number_tok_exhaustive.py  td_build_l2.py  td_build_l2_v2.py  td_normalize.py  td_upload_hf.py  tok_overlap.py  verify_parquet.py
tokenizer_transplant/: MODEL_CARD.md  README.md  __init__.py  cli.py  omp.py  selftest.py  transplant.py
train_core/: README.md  __init__.py  (+1 more)
(+308 files in other folders)
