[project]
name = "proof-pilot"
version = "0.1.0"
description = "Workspace for AIMO Proof Pilot dataset, model, and submission tooling."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "accelerate>=1.1.0",
    "bitsandbytes>=0.48.1",
    "datasets>=2.21.0",
    "einops>=0.8.2",
    "galois>=0.4.11",
    "gmpy2>=2.3.0",
    "huggingface-hub>=0.31.0",
    "ipykernel>=6.29.0",
    "kernels>=0.14.1",
    "liger-kernel>=0.8.0",
    "loguru>=0.7.2",
    "ninja>=1.13.0",
    "numpy>=2.1.0",
    "openai>=2.41.1",
    "pandas>=2.2.0",
    "peft>=0.13.0",
    "polars>=1.28.0",
    "psutil>=7.2.2",
    "pyarrow>=19.0.0",
    "pydantic>=2.10.0",
    "pytest>=8.3.0",
    "pyyaml>=6.0.2",
    "rich>=13.9.0",
    "ruff>=0.8.0",
    "safetensors>=0.4.5",
    "scikit-learn>=1.5.0",
    "scipy>=1.14.0",
    "sentencepiece>=0.2.0",
    "tokenizers>=0.20.0",
    "torch>=2.5.0",
    "tqdm>=4.67.0",
    "transformers>=4.57.0",
    "typer>=0.12.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
]

# cu126 (CUDA 12.6) runs on this node's 550 driver (CUDA 12.4) via CUDA
# minor-version compatibility, and ships torch 2.12 (cu128 caps at 2.11).
# cu130 (CUDA 13.x) does NOT work — different CUDA major than the driver.
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
